Fix: tooltip alignment

--- a/src/modules/core/components/DecisionHub/DecisionOption.css
+++ b/src/modules/core/components/DecisionHub/DecisionOption.css
@@ -11,14 +11,14 @@
   background: none;
   text-align: left;
   cursor: pointer;
+}
 
-  &:only-of-type {
-    border-bottom-color: transparent;
-  }
+.wrapper:only-of-type {
+  border-bottom-color: transparent;
+}
 
-  &:last-of-type:not(.themeAlt) {
-    border-bottom: 1px solid var(--grey-blue-0);
-  }
+.wrapper:last-of-type:not(.themeAlt) {
+  border-bottom: 1px solid var(--grey-blue-0);
 }
 
 .stateDisabled {
@@ -48,5 +48,25 @@
 @media screen and query700 {
   .main {
     height: auto;
+    border: none;
+
+    &:last-of-type:not(.themeAlt) {
+      border-bottom: 0px;
+    }
+  }
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    border: none;
+    border-top: 1px solid var(--grey-blue-0);
+
+    &:only-of-type {
+      border-bottom-color: transparent;
+    }
+
+    &:last-of-type:not(.themeAlt) {
+      border-bottom: 1px solid var(--grey-blue-0);
+    }
   }
 }
